MO-106 : Provide simplified aggregated observations endpoint